# CorAl-ScanAlignmentClassification

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt
include/alignment_checker/: AlignmentQuality.h  DataHandler.h  ScanEvaluator.h  ScanType.h  Utils.h  alignmentinterface.h  alignmenttester.h  scan.h  scancomparsion.h  utils.h  viewer.h
launch/: orkla_coral_service.launch
matlab/Learning/: logisticIntraDataset.m
python/: alignment_classifier.py  alignment_service.py  classify.py  evaluate.py  parameters.py  plotting.py  statistics.py  utils.py
rviz/: alignment_arla.rviz  vis.rviz  vis_cluster.rviz  viz_cluster.rviz
script/arla/: test_alignment  test_overlap_arla  view_score
script/orkla/: view_score_orkla2021
script/orkla/orkla2021/: test_orkla  view_score_orkla
script/oxford/: bfar.sh  classify_oxford.sh  classify_oxford_coral.sh  run_test.sh
src/: CorAlServer.cpp  evaluate_scans.cpp  score_viewer.cpp  test_alignment.cpp
src/alignment_checker/: AlignmentQuality.cpp  DataHandler.cpp  ScanEvaluator.cpp  ScanType.cpp  Utils.cpp  alignmentinterface.cpp  alignmenttester.cpp  scan.cpp  scancomparsion.cpp  utils.cpp  viewer.cpp
test/: README.md  python_classifier_interface_tests.cpp  scan_learning_interface_tests.cpp
